--- a/background-check/index.html
+++ b/background-check/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en-US" prefix="og: https://ogp.me/ns#">
 
-<!-- Mirrored from www.hisgracehomecare.org/background-check/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 07 Sep 2025 17:11:03 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
 	<meta charset="UTF-8">
 <script>
@@ -1244,5 +1244,5 @@ gform.initializeOnLoaded( function() {jQuery(document).trigger("gform_pre_post_r
 <!-- CAPTCHA added with CAPTCHA 4WP plugin. More information: https://captcha4wp.com -->			<!-- / CAPTCHA by CAPTCHA 4WP plugin -->
 </body>
 
-<!-- Mirrored from www.hisgracehomecare.org/background-check/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 07 Sep 2025 17:11:20 GMT -->
+
 </html>
