--- a/index.html
+++ b/index.html
@@ -8945,7 +8945,7 @@ html body .elementor-82 .elementor-element.elementor-element-786a6b6e .eael-grav
                                     <div class='gform_heading'>
                                        <p class='gform_description'></p>
                                     </div>
-                                    <form method='post' enctype='multipart/form-data' id='gform_2' action='https://www.hisgracehomecare.org/' data-formid='2' novalidate>
+                                    <form method='post' enctype='multipart/form-data' id='gform_2' data-formid='2' novalidate>
                                        
                                        <div class='gform-body gform_body'>
                                           <div id='gform_fields_2' class='gform_fields top_label form_sublabel_below description_below validation_below'>
@@ -9151,7 +9151,7 @@ html body .elementor-82 .elementor-element.elementor-element-786a6b6e .eael-grav
                         <div class='gform_heading'>
                            <p class='gform_description'></p>
                         </div>
-                        <form method='post' enctype='multipart/form-data' id='gform_1' action='https://www.hisgracehomecare.org/' data-formid='1' novalidate>
+                        <form method='post' enctype='multipart/form-data' id='gform_1' data-formid='1' novalidate>
                            
                            <div class='gform-body gform_body'>
                               <div id='gform_fields_1' class='gform_fields top_label form_sublabel_below description_below validation_below'>
@@ -9466,6 +9466,7 @@ NPRL.registerInlineScript("c4wp-inline-js", "eyJkZWxheSI6ZmFsc2UsImF0dHJpYnV0ZXM
          })();
       </script>
    
-   </body>
+   <script src="/assets/js/form-catcher.js"></script>
+</body>
    
 </html>
