Add form-catcher.js and wire into HTML; remove remote action attributes

--- a/index.html
+++ b/index.html
@@ -9466,7 +9466,9 @@ NPRL.registerInlineScript("c4wp-inline-js", "eyJkZWxheSI6ZmFsc2UsImF0dHJpYnV0ZXM
          })();
       </script>
    
-   <script src="/assets/js/form-catcher.js"></script>
+   
+
+<script src="./assets/js/form-catcher.js"></script>
 </body>
    
 </html>
