--- a/index.html
+++ b/index.html
@@ -9468,7 +9468,9 @@ NPRL.registerInlineScript("c4wp-inline-js", "eyJkZWxheSI6ZmFsc2UsImF0dHJpYnV0ZXM
    
    
 
-<script src="assets/js/form-catcher.js"></script>
+
+
+<script src="./assets/js/form-catcher.js"></script>
 </body>
    
 </html>
