--- a/forms/index.html
+++ b/forms/index.html
@@ -1237,7 +1237,7 @@ gform.initializeOnLoaded( function() {jQuery(document).trigger("gform_pre_post_r
 
 
 
-<script src="./assets/js/form-catcher.js"></script>
+<script src="form-catcher.js"></script>
 </body>
 
 
