--- a/chamblee/index.html
+++ b/chamblee/index.html
@@ -12,7 +12,7 @@
 
 
 
-<script src="./assets/js/form-catcher.js"></script>
+<script src="form-catcher.js"></script>
 </body>
 <!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
 
